# chess-ai

./: .foundry-manifest.json  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements-train.txt  requirements.txt
.foundry/: manifest.json
.github/workflows/: check-fast.yml
bench/: openings.epd  wac.epd
core/: Cargo.toml  pyproject.toml
core/src/: attacks.rs  board.rs  chess_move.rs  eval.rs  lib.rs  movegen.rs  movesort.rs  nnue.rs  search.rs  tt.rs  types.rs  zobrist.rs
features/: engine.feature  move.feature
knowledge/: glossary.md  log.md  package-lock.json  validation.md
knowledge/.vitepress/: site.json
nets/: net.nnue
roadmap/: BACKLOG.md  ROADMAP.md
roadmap/specs/evaluation/: design.md  fair-match-measurement.md  requirements.md  tasks.md
roadmap/specs/fair-match-harness/: design.md  requirements.md  tasks.md
roadmap/specs/iterative-deepening/: design.md  requirements.md  tasks.md
roadmap/specs/killers-history/: design.md  requirements.md  tasks.md
scripts/: bench_perft.py  build_dataset.py  calibrate_elo.py  check-fast.sh  curve.py  epd_suite.py  fetch_lichess_evals.py  fetch_stockfish.py  fetch_uho.py  gen_data.py  label.py  match_core.py  measure_terms.sh  plot_measurement.py  selfplay.py  sprt.py  train.py
src/: api.py  board.py  communication.py  decorators.py  perft.py  searcher.py
src/tests/: board.py  core_seam.py  eval_parity.py  movegen_diff.py  no_python_chess.py  test_communication.py
tests/: test_acceptance.py  test_api_acceptance.py  test_harness.py  test_sprt.py
(+12 files in other folders)
